# aoc2023

./: .gitignore  Cargo.toml
daily-template/: Cargo.toml
day-01/: Cargo.toml
day-01/src/: part1.rs  part2.rs  part2_aho_corasick.rs
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml
day-03/src/: lib.rs  part1.rs  part2.rs  util.rs
day-04/: Cargo.toml
day-04/src/: part1.rs  part2.rs
day-05/: Cargo.toml
day-05/src/: part1.rs  part2.rs
day-06/: Cargo.toml
day-06/src/: part1.rs  part2.rs
day-07/: Cargo.toml
day-07/src/: part1.rs  part2.rs
day-08/: Cargo.toml
day-08/src/: part1.rs  part2.rs
day-09/: Cargo.toml
day-09/src/: part1.rs  part2.rs
day-10/: Cargo.toml
day-10/src/: part1.rs  part2.rs  utils.rs
day-11/: Cargo.toml
day-11/benches/: benchmarks.rs
day-11/src/: part1.rs  part2.rs  utils.rs
day-12/: Cargo.toml  part1-results.txt
day-12/src/: brainstorming.md  part1.rs  part2.rs  utils.rs
day-13/: Cargo.toml
day-13/src/: part1.rs  part2.rs  utils.rs
day-14/: Cargo.toml
day-14/src/: part1.rs  part2.rs  utils.rs
day-15/: Cargo.toml
day-15/src/: part1.rs  part2.rs
day-16/: Cargo.toml
day-16/src/: part1.rs  part2.rs  utils.rs
day-17/: Cargo.toml
day-17/src/: part1.rs  part2.rs  utils.rs
day-18/: Cargo.toml
day-18/src/: part1.rs  part2.rs
day-19/: Cargo.toml
day-19/src/: lib.rs  (+2 more)
day-20/: Cargo.toml
day-21/: Cargo.toml
day-22/: Cargo.toml
day-23/: Cargo.toml
day-24/: Cargo.toml
day-24/benches/: benchmarks.rs
day-24/src/: part1.rs  part2.py  part2.rs  utils.rs
day-25/: Cargo.toml  part1.dot
(+13 files in other folders)
