[package]
name = "day-24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
dhat = { workspace = true }
num-traits = { workspace = true }
z3-sys = { version = "0.8.1", features = ["static-link-z3"] }
z3 = "0.12.1"

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "day-24"
path = "benches/benchmarks.rs"
harness = false

[features]
dhat-heap = []
